--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
   <title>GOIT-JS-HW-10</title>
 </head>
 <body>
-  <a href="./1-timer..html"></a>
-  <a href="./2-snackbar.html"></a>
+  <a href=".//1-timer.html">Timer</a>
+  <a href="./2-snackbar.html">Snackbar</a>
 </body>
 </html>
