--- a/src/1-timer.html
+++ b/src/1-timer.html
@@ -8,14 +8,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet" />
     <link rel="stylesheet" href="./css/1-timer.css" />
-    <link rel="stylesheet" href="./css/styles.css"/>
+    <link rel="stylesheet" href="./css/styles.css" />
     <title>Page 2</title>
     
   </head>
   <body>
     <section>
-      <a href="./index.html">Go to home</a>
-    </section>
+      <a href="./index.html"></a>
     <input type="text" id="datetime-picker" />
     <button type="button" data-start>Start</button>
     
