--- a/src/index.html
+++ b/src/index.html
@@ -3,10 +3,22 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet" />
+    <link rel="stylesheet" href="./css/1-timer.css" />
+    <link rel="stylesheet" href="./css/styles.css" />
   <title>GOIT-JS-HW-10</title>
+<link rel="stylesheet" href="./css/styles.css" />
 </head>
 <body>
-  <a href=".//1-timer.html">Timer</a>
-  <a href="./2-snackbar.html">Snackbar</a>
+  <section>
+    <ul>
+      <li><a href="./1-timer.html">Timer</a></li>
+      <li><a href="./2-snackbar.html">Snackbar</a></li>
+    </ul>
+  </section>
+  
 </body>
 </html>
